# HQTCSDL

./: .env.example  .gitignore  README.md  main.py  prefect.yaml  pyproject.toml  requirements.txt
credentials/db/: db_config.py
src/etl/: csv_utils.py  integrity_audit.py  paths.py
src/etl/clean/: __init__.py  clean_all.py  clean_conditions.py  clean_encounters.py  clean_medications.py  clean_observations.py  clean_patients.py  clean_payers.py  clean_procedures.py  clean_providers.py  common.py
src/etl/cleaned_data/: encounters_cleaned.csv  medications_cleaned.csv  patients_cleaned.csv  payers_cleaned.csv  procedures_cleaned.csv  providers_cleaned.csv
src/etl/data/: conditions.csv
src/etl/docs/: pyspark_guide_vi.md
src/etl/extract/: __init__.py  extract_all.py  extract_conditions.py  extract_csv.py  extract_db.py  extract_encounters.py  extract_medications.py  extract_observations.py  extract_patients.py  extract_payers.py  extract_procedures.py  extract_providers.py
src/etl/load/: __init__.py  load_star_to_bigquery.py
src/etl/pipelines/: pipeline_all.py  pipeline_conditions.py  pipeline_encounters.py  pipeline_observations.py  pipeline_procedures.py  pipeline_procedures_dw.py
src/etl/transform/: __init__.py  _star_common.py  common.py  dim_date.py  dim_diagnosis.py  dim_encounter.py  (+20 more)
warehouse/ddl/: 01_dim_date.sql  02_dim_patient.sql  04_dim_payer.sql  05_dim_encounter_type.sql  06_dim_condition.sql  07_dim_observation.sql  08_dim_medication.sql  09_fact_encounters.sql  10_fact_observations.sql  run_all_sql.sql
warehouse/scripts/: main.py
(+57 files in other folders)
